--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: csharp
 solution: PhoneNumberValidation.sln
 mono: none
 dotnet: 1.1.5
+install:
+- dotnet restore
 script:
- - dotnet restore
- - dotnet test  UnitTest/UnitTest.csproj
+- dotnet build
+- dotnet test UnitTest/UnitTest.csproj
