--- a/PhoneNumberValidation/PhoneNumberValidation.csproj
+++ b/PhoneNumberValidation/PhoneNumberValidation.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Codecov" Version="1.0.3" />
+  </ItemGroup>
+
 </Project>
